/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mobileharness.shared.version;

option java_package = "com.google.devtools.mobileharness.shared.version.proto";
option java_outer_classname = "VersionProto";

// Request for checking version compatibility of the RPC service and stub.
message VersionCheckRequest {
  // Required: the version of the stub.
  string stub_version = 1;
  // Required: the min service version required by the stub.
  string min_service_version = 2;
}

// Request of version compatibility check between RPC service and stub.
message VersionCheckResponse {
  // Required: the version of the service.
  string service_version = 1;
}

// Proto representation of a Version.java instance.
// (com.google.devtools.mobileharness.shared.version.Version.java)
message Version {
  // Required.
  //
  // Version.toString(). E.g., "2.34.5"
  string version = 1;

  // Required.
  //
  // The field name. E.g., "LAB_VERSION".
  string type = 2;
}

// Build version information of a component.
message BuildVersion {
  // GitHub commit ID from which the component was built, if any.
  optional string github_version = 1;

  // Google CL number from which the component was built, if any.
  optional int64 google_version = 2;

  // GitHub branch name from which the component was built, if any.
  optional string github_branch = 3;

  // Kokoro build number from which the component was built, if any.
  optional int64 kokoro_build = 4;
}

// Version information of a component (e.g., lab server).
message Versions {
  repeated Version versions = 1;

  BuildVersion build_version = 2;
}
